@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.29
 Date: ????
+  Changes:
+    - Correct rounding for quality bonuses
   Bug fixes:
     - Fix for empty quality bonus string
 ---------------------------------------------------------------------------------------------------
